# vehicle-reid

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: graph-based.yml  single-branch-augment.yml  single-branch-vric.yml  single-branch.yml  veri-adamw.yml  veri.yml  vric.yml
tests/: test_eval.py  test_utils.py
vehicle_reid/: __init__.py  args.py  datasets.py  eval.py  gms.py  losses.py  model.py  optimizer.py  test.py  train.py  utils.py
vehicle_reid/config/: __init__.py  defaults.py
vehicle_reid/datasets/: __init__.py  base.py  load_data.py  match_dataset.py  transforms.py  utils.py  veri.py  visualise.py  vric.py
vehicle_reid/eval/: __init__.py  cache.py  eval.py  plot.py  reranking.py  test.py  visualise.py
vehicle_reid/model/: __init__.py  convnext.py  graph.py  model.py  modules.py  resnet.py  siamese.py
vehicle_reid/train/: losses.py  mine_triplets.py  optimizer.py  train.py
vehicle_reid/utils/: __init__.py  avg_meter.py  checkpoint.py  gms.py  logger.py  logging.py  normal_values.py  numpy_encoder.py  pad_label.py  set_seed.py
