[project]
name = "vehicle-reid"
version = "0.9.0"
description = "Vehicle Re-Identification with Deep Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "opencv-contrib-python>=4.11.0.86",
    "pandas>=2.2.3",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[project.scripts]
vehicle-reid = "vehicle_reid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
useLibraryCodeForTypes = false
typeCheckingMode = "standard"
reportAttributeAccessIssue = false
reportArgumentType = false
reportCallIssue = false
venv = ".venv"
venvPath = "."
